integrated history and user with mongodb

--- a/chatbot_project/.env
+++ b/chatbot_project/.env
@@ -1,1 +1,5 @@
 GEMINI_API_KEY=AIzaSyDdWswu_U_4e_0CnhXXy32BX-dBvJ71LyI
+MONGODB_URI=mongodb+srv://tejaskait12_db_user:mWlkqiz46FetKbb7@chatbott.erggxqg.mongodb.net/?retryWrites=true&w=majority&appName=CHATBOTT
+MONGODB_DB=tejaskait12_db_user
+
+
